FAQ-accordion: Fix Accessability; Missed flaws; CSS reordering for readability

--- a/FEM/faq-accordion/index.css
+++ b/FEM/faq-accordion/index.css
@@ -25,42 +25,6 @@ body {
     width: 100%;
 }
 
-h1 {
-    display: inline-block;
-    font-size: 1.7rem;
-    font-weight: 700;
-    margin: .5rem 0 0 1.1rem;
-}
-
-h2 {
-    font-size: .9rem;
-    font-weight: 600;
-    max-width: 80%;
-}
-
-section {
-    margin: 1rem .5rem .8rem 1.6rem;
-}
-
-p {
-    font-size: .75rem;
-    padding: 1rem 1.2rem .5rem 0;
-    line-height: 1.3rem;
-    color: hsl(292, 16%, 49%);
-    width: 100%;
-}
-
-hr {
-    width: 95%;
-    margin-left: 0;
-    margin-top: 1rem;
-    border: solid .1rem hsla(293, 16%, 49%, 0.11);
-}
-
-section:last-of-type {
-    padding-bottom: .5rem;
-}
-
 #banner {
     position: fixed;
     top: 0;
@@ -69,7 +33,27 @@ section:last-of-type {
     width: 100vw;
 }
 
-#card {
+section,
+header {
+    margin: 1rem .5rem .8rem 1.6rem;
+}
+
+section:last-of-type {
+    padding-bottom: .5rem;
+}
+
+.starImg {
+    max-height: 1.4rem;
+}
+
+h1 {
+    display: inline-block;
+    font-size: 1.7rem;
+    font-weight: 700;
+    margin: .5rem 0 0 1.1rem;
+}
+
+main {
     border-radius: .5rem;
     background-color: hsl(0, 0%, 100%);
     max-width: 290px;
@@ -77,25 +61,49 @@ section:last-of-type {
     transition: box-shadow .5s ease-in;
 }
 
-#card:hover {
+main:hover {
     box-shadow: rgba(105, 105, 105, 0.483) 4px 4px 35px;
     transition: box-shadow .5s ease-in;
 }
 
 .accordionBtn {
-    background-color: rgba(0, 0, 0, 0);
     display: flex;
+    justify-content: space-between;
+    text-align: left;
+    align-items: center;
     width: 95%;
     margin: 0;
     padding: 0;
     border: none;
+    background-color: rgba(0, 0, 0, 0);
     cursor: pointer;
-    align-items: center;
+    color: hsl(292, 42%, 14%);
+    font-size: .9rem;
+    font-weight: 600;
+    transition: color .5s ease;
 }
 
 .accordionBtn:hover {
     color: hsl(290, 100%, 42%);
-    text-shadow: 1px 0px 18px rgba(26, 26, 26, 0.11);
+    text-shadow: 2px 2px 18px rgba(26, 26, 26, 0.142);
+    transition: all .5s ease;
+}
+
+span {
+    max-width: 80%;
+}
+
+.plusMinusImg {
+    max-height: 1.8rem;
+    margin-left: auto;
+}
+
+p {
+    font-size: .75rem;
+    padding: 1rem 1.2rem .5rem 0;
+    line-height: 1.3rem;
+    color: hsl(292, 16%, 49%);
+    width: 100%;
 }
 
 .answer {
@@ -108,16 +116,6 @@ section:last-of-type {
     max-height: 11rem;
     overflow-y: scroll;
     overflow-x: hidden;
-}
-
-.plusMinusImg {
-    max-height: 1.8rem;
-    display: flex;
-    margin: auto 0 auto auto;
-}
-
-.starImg {
-    max-height: 1.4rem;
 }
 
 
@@ -137,9 +135,15 @@ section:last-of-type {
     background: hsl(277, 89%, 89%);
 }
 
+hr {
+    width: 95%;
+    margin-left: 0;
+    margin-top: 1rem;
+    border: solid .1rem hsla(293, 16%, 49%, 0.11);
+}
 
 @media (min-width: 520px) {
-    #card {
+    main {
         min-width: 510px;
         max-width: 30vw;
         border-radius: .7rem;
@@ -154,7 +158,7 @@ section:last-of-type {
         font-size: .85rem;
     }
 
-    h2 {
+    button {
         max-width: 90%;
     }
 
@@ -166,7 +170,7 @@ section:last-of-type {
         padding-bottom: 1rem;
     }
 
-    #head {
+    header {
         margin-top: 2.2rem;
         margin-bottom: 1.6rem;
     }
